2004-12-06  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/javax/swing/DefaultListCellRenderer.java,
	libraries/javalib/javax/swing/JLabel.java,
	libraries/javalib/javax/swing/JList.java:
        Resynced with GNU Classpath.

	2004-12-06  Michael Koch  <konqueror@gmx.de>

        * javax/swing/DefaultListCellRenderer.java
        (serialVersionUID): Made private.
        (getListCellRendererComponent): Set horizontal alignment.
        * javax/swing/JLabel.java
        (setVerticalAlignment): Re-implemented.
        (setHorizontalAlignment): Do nothing if old value = new value.
        * javax/swing/JList.java
        (setCellRenderer): Likewise.
        (setModel): Re-implemented.
        (setSelectionModel): Likewise.

2004-12-06  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/awt/Component.java,
	libraries/javalib/java/awt/geom/Rectangle2D.java:
        Resynced with GNU Classpath.

	2004-12-06  David Gilbert <david.gilbert@object-refinery.com>

        * java/awt/Component.java,
        java/awt/geom/Rectangle2D.java:
        Javadoc fixes.

2004-12-06  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/io/BufferedInputStream.java:
        Resynced with GNU Classpath.

	2004-12-06  Jeroen Frijters  <jeroen@frijters.net>

        * java/io/BufferedInputStream.java
        (read(byte,int,int)): Handle case when zero bytes are requested.

2004-12-06  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/awt/color/ICC_Profile.java:
        Resynced with GNU Classpath.

	2004-12-06  Jeroen Frijters  <jeroen@frijters.net>

        * java/awt/color/ICC_Profile.java
        (finalize): Removed pointless field assignments.

2004-12-06  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/gnu/java/net/protocol/http/HTTPConnection.java,
	libraries/javalib/gnu/java/net/protocol/http/HTTPURLConnection.java:
	Resynced with GNU Classpath.
	
	2004-12-05  Chris Burdess  <dog@gnu.org>
