@@ -1,5 +1,11 @@
 2004-12-06  Dalibor Topic  <robilad@kaffe.org>
 
+	* libraries/javalib/gnu/classpath/RawData32.java,
+	libraries/javalib/gnu/classpath/RawData64.java:
+        Resynced with GNU Classpath.
+
+2004-12-06  Dalibor Topic  <robilad@kaffe.org>
+
 	* libraries/javalib/javax/swing/DefaultListCellRenderer.java,
 	libraries/javalib/javax/swing/JLabel.java,
 	libraries/javalib/javax/swing/JList.java:
